# holographersworkbench

./: .gitignore  AI_README.md  ARCHITECTURE.md  QUICK_START_AI.md  README.md  TSP_Performance_Optimization_Analysis.docx  __init__.py  convergence_analyzer.py  ergodic_jump.py  example_convergence.py  example_error_visualizer.py  example_profiler.py  examples.py  fast_zetas.py  holographic_compression.py  holographic_encoder.py  optimization.py  pyproject.toml  quantum_clock.py  requirements.txt  spectral.py  utils.py
demos/: demo_14_convergence_analyzer.ipynb  demo_15_quantum_clock.ipynb  demo_16_ergodic_jump.ipynb  demo_2_phase_retrieval.ipynb  demo_3_holographic_refinement.ipynb  demo_4_sublinear_optimization.ipynb  demo_5_complete_workflow.ipynb
deprecated/: CONSOLIDATION_STATUS.md  NOTEBOOK_PLAN.md  README.md  REORGANIZATION_COMPLETE.md  __init__.py  demo_10_time_affinity.ipynb  demo_11_performance_profiler.ipynb  demo_12_error_pattern_visualizer.ipynb  demo_13_formula_code_generator.ipynb  demo_1_spectral_scoring.ipynb  demo_6_srt_calibration.ipynb  demo_7_fractal_peeling.ipynb  demo_8_holographic_compression.ipynb  demo_9_fast_zetas.ipynb  fractal_peeling.py  holographic.py  optimization.py  performance_profiler.py  quantum_clock.py  utils.py
dimensional_downcasting/: .gitignore  README.md  requirements.txt
docs/: DISCOVERY_JOURNEY.md  THEORY_OF_OPERATION.md  TRUTH_SPACE_PRIMER.md  clock_resonant_optimizer_v2.md  kerr_truth_space_discovery.md  zeta_line_method.md
examples/: basic_workflow.py  code_generation.py  convergence_analysis.py  demo_adaptive_nonlocality_qik.py  demo_additive_error_stereo.py  demo_holographic_depth.py  demo_quantum_autoencoder.py  error_visualization.py  fractal_compression.py  performance_profiling.py  quantum_autoencoder_tsp.py
experimental/: encoder_decoder.py
practical_applications/: benchmark_clock_optimizer.py  benchmark_clock_v2.py  benchmark_dd_integration.py  benchmark_jax_resonance.py  benchmark_large_scale.py  benchmark_tsp_optimizations.py  demo_clock_compiler.py  explore_remaining_upgrades.py  investigate_n200_dip.py  sat_benchmark.py  tsp_quantum_chaos_solver.py  tsplib_benchmark.py  tsplib_large_benchmark.py
protocols/: EQUATION_DISCOVERY_PROTOCOL.md  gop.md  (+1 more)
tests/: README.md  (+5 more)
(+164 files in other folders)
