[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holographersworkbench"
version = "0.1.0"
description = "Unified toolkit for holographic signal processing, spectral optimization, and sublinear algorithms"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Holographer's Workbench Contributors"}
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mpmath>=1.2.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/holographersworkbench"
Documentation = "https://github.com/yourusername/holographersworkbench/tree/main/docs"
Repository = "https://github.com/yourusername/holographersworkbench"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
