[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holographersworkbench"
version = "0.1.0"
description = "Unified toolkit for holographic signal processing, spectral optimization, and sublinear algorithms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Lesley Gushurst"}
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "mpmath>=1.2.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["workbench*"]
exclude = ["tests*", "examples*", "practical_applications*", "documents*"]

[project.urls]
Homepage = "https://github.com/lostdemeter/holographersworkbench"
Documentation = "https://github.com/lostdemeter/holographersworkbench#readme"
Repository = "https://github.com/lostdemeter/holographersworkbench"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
